--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "next": "14.1.0",
+    "@reduxjs/toolkit": "^2.0.1",
+    "react-redux": "^9.1.0",
+    "redux-persist": "^6.0.0",
+    "redux-toolkit": "^1.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
